# relax-player

./: .gitignore  CREDITS.md  Cargo.toml  LICENSE  README.md  release.sh
.github/workflows/: ci.yml  release.yml
src/: app.rs  audio.rs  config.rs  download.rs  main.rs  prompt.rs  ui.rs
