[package]
name = "relax-player"
version = "0.1.0"
edition = "2024"

[dependencies]
rodio = "0.19"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
anyhow = "1.0"
reqwest = { version = "0.12", features = ["blocking"] }
tar = "0.4"
flate2 = "1.0"
